2004-03-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkgldrawable.c: Fix warning of Gdk::GLDrawable#gl_begin

2004-02-13 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkgldrawable.c: added support for blocks in gl_begin
	gldrawable.gl_begin { ... }
	* sample/*.rb: updated the samples to use the block version of gl_begin

2003-12-29 Vincent Isambart <isambart@netcourrier.com>

	* sample/*.rb: corrected the behavior when closing the window.

2003-12-26 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglext.c: mGdk and mGdk are no more global variables.
	* sample/*.rb: corrected the behavior of the "Quit" button.

2003-09-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: win32 support.

2003-08-28 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkwindow.c: Gdk::Window#gl_drawable can now be called

2003-08-27 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglconfig.c, src/rbgtkwidget.c: replaced
        rbgobj_get_{enum,flags} with RVAL2{GENUM,GFLAGS}

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Exit with 1 when the package is not found.

2003-08-25 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgtkwidget.c: Added default parameters and a rgbobj_get_enum to
	Gtk::Widget#create_gl_context

2003-08-23 Vincent Isambart <isambart@netcourrier.com>

	* sample/simple.rb: Corrected a mistake in a comment
	* src/rbgdkglconfig.c, src/rbgtkwidget.c: corrected a little bug when
	using attrib lists and NUM2INT was replaced by rbgobj_get_{enum,flags}
	when we are waiting for an enum or flag

2003-08-21 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglconfig.c, src/rbgtkglext.c: defined enum/flags classes
	and fixed version numbers
	* sample/simple.rb: added in a comment an other way to create a
	Gdk::GLConfig
	* src/rbgdkglconfig.c: added automatic conversion to and from booleans
	for some attributes values

2003-08-21 Vincent Isambart <isambart@netcourrier.com>
